simplify list collection