@@ -9,7 +9,6 @@ import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class FriendsService {
@@ -26,7 +25,7 @@ public class FriendsService {
         return new FriendsData(
                 friendsRepository.all().stream()
                         .map(friend -> new FriendData(friend.id(), friend.name()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
